--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "author": {
-    "name": "Michael Benford",
-    "email": "michael@michaelbenford.net"
+    "name": "Chaudhry Junaid Anwar",
+    "email": "junaid.anwar@careaxiom.com"
   },
   "name": "cm-tags-input",
   "prettyName": "cmTagsInput",
-  "version": "3.1.1",
+  "version": "3.1.1-alpha.1",
   "description": "Tags input directive for AngularJS",
   "license": "MIT",
   "homepage": "",
